force-app/main/default/objects/Mail__c/Mail__c.object-meta.xml
<CustomObject>
    <label>Mail</label>
    <nameField>
        <displayFormat>MAIL-{0000}</displayFormat>
        <label>Mail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>