force-app/main/default/objects/Mail__c/fields/Deliver_To__c.field-meta.xml
<CustomField>
    <fullName>Deliver_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deliver To</label>
    <referenceTo>Inhabitant__c</referenceTo>
    <relationshipLabel>Mails (Deliver To)</relationshipLabel>
    <relationshipName>Mails1</relationshipName>
    <type>Lookup</type>
</CustomField>