force-app/main/default/objects/Mail__c/fields/First_and_last__c.field-meta.xml
<CustomField>
    <fullName>First_and_last__c</fullName>
    <externalId>true</externalId>
    <label>First and last</label>
    <length>10</length>
    <type>Text</type>
</CustomField>