force-app/main/default/objects/Mail__c/fields/Fragile_T_F__c.field-meta.xml
<CustomField>
    <fullName>Fragile_T_F__c</fullName>
    <label>Fragile(T/F)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>