force-app/main/default/objects/Mail__c/fields/Has_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Has_Insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Insurance?</label>
    <type>Checkbox</type>
</CustomField>