force-app/main/default/objects/Mail__c/fields/Route_Name__c.field-meta.xml
<CustomField>
    <fullName>Route_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Route Name</label>
    <referenceTo>Route__c</referenceTo>
    <relationshipLabel>Route Name</relationshipLabel>
    <relationshipName>Mails</relationshipName>
    <type>Lookup</type>
</CustomField>