force-app/main/default/objects/Mail__c/fields/Send_To__c.field-meta.xml
<CustomField>
    <fullName>Send_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Send To</label>
    <referenceTo>Inhabitant__c</referenceTo>
    <relationshipLabel>Mails</relationshipLabel>
    <relationshipName>Mails</relationshipName>
    <type>Lookup</type>
</CustomField>