force-app/main/default/objects/Mail__c/fields/Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number__c</fullName>
    <label>Tracking Number</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>